@@ -1,3 +1,8 @@
+Tue Jun 14 14:15:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO-INSTALL.html:
+          Updated Borland build instructions
+
 Tue Jun 14 13:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/PI/ORBInitializer_Registry_Impl.cpp:
